<resources>
    <string name="app_name">简记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="write_memo">备忘录</string>
    <string name="view_memo">备忘录</string>
    <string name="view_cipher">密码本</string>
    <string name="settings_lock_diary">日记本加锁</string>
    <string name="settings_lock_memo">备忘录加锁</string>
    <string name="settings_lock_cipher">密码本加锁</string>
    <string name="password_alter">修改密码</string>
    <string name="btn_negative">取消</string>
    <string name="btn_positive">确定</string>
    <string name="hint_input_again">再输入一次</string>
    <string name="hint_input_first">字母或数字的组合</string>
    <string name="alarm_title">备忘提醒</string>
    <string name="alarm_btn_ok">知道了</string>
    <string name="key_password">bdpq_unique_pwd</string>
    <string name="error_pwd_text">密码输入错误</string>
    <string name="first_enter">首次进入,请设置唯一密码</string>
    <string name="set_pwd_succeed">设置成功,请牢记密码</string>
    <string name="not_same_pwd">两次密码输入不一致，请重新输入</string>

    <string name="toolbar_title_diary_list">日记列表</string>
    <string name="toolbar_title_view_diary">查看日记</string>
    <string name="toolbar_title_create_diary">写日记</string>

    <string name="not_finish_diary">日记还没有写完哦~</string>
    <string name="save_data_succeed">保存成功</string>
    <string name="save_data_fail" >保存失败</string>
    <string name="no_more_data">没有更多了......</string>
    <string name="enter_write_mode">双击文字进入修改模式</string>
    <string name="dialog_title_alter_tips">更改提示</string>
    <string name="alter_diary_message">要保存所做的更改吗？</string>
    <string name="dialog_title_delete_tips">删除提示</string>
    <string name="delete_diary_message">删除后将不可恢复，确定永久删除该日记吗？</string>
    <string name="already_delete_diary">成功删除该日记</string>
    <string name="toolbar_title_memo_list">备忘列表</string>
    <string name="add_alarm">闹钟提醒</string>
    <string name="set_datetime_error">时间设定错误</string>
    <string name="finish">完成</string>
    <string name="not_finish_memo">备忘内容还没有写哦～～</string>
    <string name="toolbar_title_create_memo">备忘录</string>
    <string name="alter_success">修改成功</string>
    <string name="item_menu_discard">丢弃</string>
    <string name="hint_input_name">为该密码取一个名字</string>
    <string name="hint_input_account">输入密码账户</string>
    <string name="hint_input_pwd">输入密码</string>
    <string name="toolbar_title_cihper_list">密码列表</string>
    <string name="not_is_null">不能为空</string>
    <string name="already_delete_memo">成功删除该备忘信息</string>
    <string name="already_delete_cipher">成功删除该密码记录</string>
    <string name="toolbar_title_create_cipher">密码本</string>
    <string name="toolbar_title_recycled_list">回收站</string>
    <string name="view_dump">回收站</string>
    <string name="revert_success">还原成功</string>
    <string name="delete_success">已永久删除</string>
    <string name="item_menu_revert">还原</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="warn">提示</string>
    <string name="choose_you_wrote_one">请选出你曾写过的一项</string>
    <string name="tips_find_back_pwd">你已经多次输入错误的密码， 请找回你的密码</string>
    <string name="find_back_pwd_success">找回密码失败</string>
    <string name="verify_success">验证成功</string>
    <string name="sure_do_not_save_data">确定不保存所写的内容吗？</string>
    <string name="toolbar_settings">设置</string>
    <string name="write_diary">日记本</string>
    <string name="tips_write_data">还没有数据,快去写一条吧</string>
    <string name="check_update">检查更新</string>
    <string name="version_name">version:1.1.1</string>

</resources>
