<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/diary"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/write_diary" />
        <item
            android:id="@+id/memo"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/write_memo" />
        <item
            android:id="@+id/cipher"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/view_cipher" />
        <item
            android:id="@+id/dump"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/view_dump" />
    </group>

    <item android:title="more">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_build_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/action_check_update"
                android:icon="@drawable/ic_find_replace_black_24dp"
                android:title="@string/check_update" />

        </menu>
    </item>
</menu>
