<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/dialog_button"
    >

    <EditText
        android:id="@+id/pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/hint_input_first" />

    <EditText
        android:id="@+id/pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:inputType="textPassword"
        android:hint="@string/hint_input_again"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCancel"
            android:layout_weight="1"
            android:background="@drawable/dialog_button"
            android:text="@string/btn_negative"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            />

        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorOk"
            android:background="@drawable/dialog_button"
            android:text="@string/btn_positive"/>
    </LinearLayout>

</LinearLayout>