<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/app_toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/counterText">

        <EditText
            android:id="@+id/pwd_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_input_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/counterText"
        >

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_input_account"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/counterText"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_input_pwd"
            android:inputType="textPassword"

            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/fab_user_margin"
        android:background="@drawable/btn_fulfil"
        android:src="@drawable/ic_done_white_24dp" />

</LinearLayout>
