<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar_sub" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/color_setting_item"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/settings_lock_diary"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/lock_diary"
            />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/color_setting_item"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/settings_lock_memo"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/lock_memo"
            />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:background="@color/color_setting_item"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/settings_lock_cipher"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/lock_cipher"
            />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:orientation="vertical"
        android:clickable="true"
        android:id="@+id/alter_pwd"
        android:background="@color/color_setting_item"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/password_alter"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=">>"
            android:textSize="27sp"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    
</LinearLayout>